# clang-cast

./: .gitignore  CMakeLists.txt  Cast.h  CastOptions.h  CastUtils.h  ClangCast.cpp  ClangCast.h  Consumer.h  Matcher.h  README.md  example_casts.cpp
tests/: CMakeLists.txt  ClangCXXCastTestCases.h  ClangCastTestCases.h  ClangCastTests.cpp  ClangChangeQualifierTestCases.h  ClangFunctionPtrTestCases.h  ClangQualifierTestCases.h
